--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ node_modules
 /build
 /.svelte-kit
 /package
-.env
+#.env
 .env.*
 !.env.example
 vite.config.js.timestamp-*
@@ -14,3 +14,5 @@ archives
 css
 zz*
 fly.toml
+.vercel
+.output
