--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@radixdlt/babylon-gateway-api-sdk": "1.0.0-ash.2",
+		"@radixdlt/babylon-gateway-api-sdk": "1.0.0-rc.1.8",
 		"@radixdlt/radix-dapp-toolkit": "^0.2.0"
 	}
 }
