--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 	"type": "module",
 	"dependencies": {
 		"@radixdlt/babylon-gateway-api-sdk": "1.0.0-rc.1.8",
-		"@radixdlt/radix-dapp-toolkit": "^0.2.0"
+		"@radixdlt/radix-dapp-toolkit": "^0.2.0",
+		"pocketbase": "^0.15.2"
 	}
 }
