add Moralis APIs for getting native balance, token balances, nft metadata

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 PRIVATE_URI=http://www.google.com
 PRIVATE_VAR=private_var
+PRIVATE_MORALIS=
 
 PUBLIC_URI=http://www.amazon.com
 PUBLIC_VAR=public_var
 PUBLIC_POCKETBASE=
+PUBLIC_ADDR=
